# PR_killer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250403_0001_initial_schema.py  20250403_0002_step2_research_domain.py  20260414_0003_research_reports.py  20260415_0004_report_extras_json.py
app/: __init__.py  main.py
app/api/: deps.py  upload_utils.py
app/domain/: __init__.py  entities.py  enums.py  pr_workspace.py  research_constants.py  research_units.py
app/infrastructure/: __init__.py  celery_app.py  database.py  db_sync.py  redis_client.py  settings.py
app/models/: __init__.py  aggregation_snapshot.py  base.py  dashboard_aggregate.py  entity_relationship.py  extracted_entity.py  insight.py  insight_source_link.py  material.py  material_extracted_entity.py  project.py  research_report.py  research_summary.py  source_audio.py  source_document.py  text_chunk.py  transcript.py  transcript_segment.py
app/repositories/: __init__.py  aggregation_snapshot_repository.py  aggregation_snapshot_sync.py  dashboard_repository.py  entity_repository.py  insight_repository.py  material_repository.py  project_repository.py  research_entity_repository.py  research_report_repository.py  research_summary_repository.py  source_audio_repository.py  source_document_repository.py  (+2 more)
tests/: test_bulk_upload.py  test_pr_report_flow.py  test_production_hardening.py
web/: .env.example  Dockerfile.dev  docker-entrypoint.sh  index.html  package-lock.json  package.json
(+101 files in other folders)
