[project]
name = "research-intelligence-agent"
version = "0.1.0"
description = "Production backend skeleton for a Research Intelligence Agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.32.0,<1",
    "python-multipart>=0.0.12,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30.0,<1",
    "alembic>=1.14.0,<2",
    "psycopg[binary]>=3.2.0,<4",
    "redis>=5.2.0,<6",
    "celery[redis]>=5.4.0,<6",
    "pgvector>=0.3.6,<1",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "httpx>=0.28.0,<1",
    "openai>=1.50.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.24.0,<1",
    "ruff>=0.8.0,<1",
    "mypy>=1.13.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
